# biot

./: .biot.cpp.swp  .biot.hpp.swp  .biot_ls.cpp.kate-swp  .biot_ls.cpp.swp  .biot_ls.hpp.swp  .depend  .gitignore  .main.cpp.swp  .nfs00000000004a001e00000106  .nfs00000000004a02d500000107  .nfs00000000004a02e00000010a  .nfs00000000004a02e00000058e  .nfs00000000004a417a00000443  .prec.m.swp  .temp.cpp.kate-swp  AMG_Interface.cpp  AMG_Interface.hpp  CMakeLists.txt  K.mm  Ku_s  Ku_x  Makefile  README.md  biot.cpp  biot.hpp  biot_ls.cpp  biot_ls.hpp  biot_ls_dome.cpp  biot_ls_dome.hpp  biot_lscpp_orig  biot_precond.hpp  cerbero_compile_log  cerbero_output  cerbero_output1_fpoly  cerbero_output2_fpoly  cerbero_output3_fpoly  cerbero_output_fpoly  cerbero_output_slu  conditioning.m  config.mk  (+64 more)
64div/: level1.1st  level1.amg  level1.frm  level1.rhs  level2.amg  level2.frm  level3.amg  level3.frm  level4.amg  level4.frm
amgvis/: pattern.pvsm
logs/: ni10_ns_np  ni1_ns_np  ni1_ns_np_p1  ni1_s_np  ni1_s_p  ni20_ns_np  ni20_ns_p  ni20_s_p  ni20_s_p_p1  ni20_s_ps  ni20_s_sp_p2  stripper  stripper.cpp
mesh/: 3dbasin_dom.msh  3dbasin_dom_monomat.msh  3dbasin_mult_dom.msh  3dbasin_mult_dom_r2.msh  basin.msh  basin_r1.msh  debugp.pos  debugr.pos  from_salome.msh  horizon_2.off  mesh_horizon_2.msh  mesh_horizon_2a.msh  mesh_horizon_2light.msh  mesh_horizon_3.msh  mesh_horizon_3_fp.msh  mesh_horizon_3light.msh  patch4.msh  patch_6.mesh  patch_6.msh  patch_6_glued.msh  patch_6fp.msh  patch_7.msh  patch_7light.msh  patch_7light2.msh  rotation.txt  rotation_s.txt  square.geo  square.msh  (+8 more)
(+774 files in other folders)
